# ggdi

./: CMakeLists.txt  LICENSE  README.md
include/ggdi/: defines.h
src/ggdi/: ggdi.cpp
